--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,7 @@
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -33,6 +32,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^5.4.1"
   }
 }
